# testovoe_aushan

./: README.md  docker-compose.yaml  pyproject.toml
src/: config.py  constants.py  main.py
src/dags/: constants.py  data_processing_dag.py
src/data/: file_handler.py  processor.py
src/data/handlers/: file_handler.py
src/services/: data_processing_service.py
src/tests/functional/: test_file_handler.py  test_processor.py
src/tests/integration/: test_data_processing_service.py
